syntax = "proto3";

package infraboard.mpaas.k8s;
option go_package = "github.com/infraboard/mpaas/apps/k8s";

import "mcube/pb/page/page.proto";
import "mcube/pb/request/request.proto";
import "mpaas/apps/k8s/pb/cluster.proto";
import "mcube/pb/resource/meta.proto";
import "mcube/pb/resource/label.proto";

service RPC {
    rpc QueryCluster(QueryClusterRequest) returns(ClusterSet);
    rpc DescribeCluster(DescribeClusterRequest) returns(Cluster);
}

message QueryClusterRequest {
    // 资源范围
    // @gotags: json:"scope"
    mcube.resource.Scope scope = 1;
    // 资源标签过滤
    // @gotags: json:"filters"
    repeated mcube.resource.LabelRequirement filters = 2;
    // 分页参数
    // @gotags: json:"page" 
    mcube.page.PageRequest page = 3;
    // 关键字参数
    // @gotags: json:"keywords"
    string keywords = 4;
    // 集群所属厂商
    // @gotags: json:"vendor"
    string vendor = 5;
    // 集群所属地域
    // @gotags: json:"region"
    string region = 6;
    // 集群Id列表
    // @gotags: json:"cluster_ids"
    repeated string cluster_ids = 7; 
}


message DescribeClusterRequest {
    // Cluster id
    // @gotags: json:"id"
    string id = 1;
}

message UpdateClusterRequest {
    // Cluster id
    // @gotags: json:"id"
    string id = 1;
    // 更新模式
    // @gotags: json:"update_mode"
    infraboard.mcube.request.UpdateMode update_mode = 2;
    // 更新人
    // @gotags: json:"update_by"
    string update_by = 3;
    // 更新时间
    // @gotags: json:"update_at"
    int64 update_at = 4;
    // 更新的书本信息
    // @gotags: json:"spec"
    CreateClusterRequest spec = 5;
}

message DeleteClusterRequest {
    // Cluster id
    // @gotags: json:"id"
    string id = 1;
}